--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Challange-Java
-
+logging.level.org.springframework.security=DEBUG
 # ===============================
 # CONFIGURATION DO BANCO DE DADOS
 # ===============================
