--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -93,6 +94,14 @@
     </dependencies>
 
     <build>
+        <!-- Configuração de encoding dos recursos -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <!-- Compiler para Java 21 -->
             <plugin>
