--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
-        </dependency>
+            <version>1.18.32</version> <!-- ou a versão mais recente -->
+            <scope>compile</scope>        </dependency>
 
         <!-- Validation (jakarta.validation.Valid) -->
         <dependency>
@@ -110,6 +110,13 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>21</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.32</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
