--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.security=DEBUG
 # CONFIGURATION DO BANCO DE DADOS
 # ===============================
 # spring.datasource.url=jdbc:mysql://localhost:3306/mottu_challenge?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/mottu_challenge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db:3306/mottu_challenge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=senha123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -33,10 +33,10 @@ spring.thymeleaf.cache=false
 # ===============================
 server.port=8080
 
-##atualizações
+##atualizaÃ§Ãµes
 ## spring.security.user.name=admin
 ## spring.security.user.password=admin123
 ## spring.security.user.roles=ADMIN
-## Essays configs build um user em memoria, mas como ja¡ config o CustomUserDetailsService para load do banco = useless.
+## Essays configs build um user em memoria, mas como jaÂ¡ config o CustomUserDetailsService para load do banco = useless.
 
 
