--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,28 @@
 spring.application.name=Challange-Java
 logging.level.org.springframework.security=DEBUG
+
 # ===============================
-# CONFIGURATION DO BANCO DE DADOS
+# CONFIGURAÇÃO DO BANCO DE DADOS
 # ===============================
-# spring.datasource.url=jdbc:mysql://localhost:3306/mottu_challenge?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://db:3306/mottu_challenge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=senha123
+
+# Local: usa "db" (container Docker)
+# Produção: Railway define as variáveis MYSQL*
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://db:3306/mottu_challenge?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:senha123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 spring.jpa.hibernate.ddl-auto=none
-#Flyway control o schema, nao mais o Hibernate#
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# FLYWAY (MIGRATIONS DE BANCO)
+# ===============================
+# FLYWAY
+# ===============================
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
@@ -31,12 +35,4 @@ spring.thymeleaf.cache=false
 # ===============================
 # SERVER
 # ===============================
-server.port=8080
-
-##atualizações
-## spring.security.user.name=admin
-## spring.security.user.password=admin123
-## spring.security.user.roles=ADMIN
-## Essays configs build um user em memoria, mas como ja¡ config o CustomUserDetailsService para load do banco = useless.
-
-
+server.port=${PORT:8080}
